third_party/move/move-compiler-v2/tests/lambda/inline-parity/eq_inline.lambda.exp

Diagnostics:
warning: Unused parameter `f`. Consider removing or prefixing with an underscore: `_f`
  ┌─ tests/lambda/inline-parity/eq_inline.move:3:13
  │
3 │     fun foo(f: |&u64|) {
  │             ^

// -- Model dump before bytecode pipeline
module 0x42::m {
    private fun foo(f: |&u64|) {
        Tuple()
    }
    private fun g() {
        m::foo(closure#0m::g$lambda$1());
        Tuple()
    }
    private fun g$lambda$1(v: &u64) {
        Eq<u64>(v, Borrow(Immutable)(1));
        Tuple()
    }
} // end 0x42::m

// -- Sourcified model before bytecode pipeline
module 0x42::m {
    fun foo(f: |&u64|) {
    }
    fun g() {
        foo(|arg0| g$lambda$1(arg0));
    }
    fun g$lambda$1(v: &u64) {
        v == &1;
    }
}


Diagnostics:
error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/eq_inline.move:7:13
  │
7 │           foo(|v| {
  │ ╭─────────────^
8 │ │             v == &1;
9 │ │         });
  │ ╰─────────^
